--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,59 +8,114 @@
 
     <EditText
         android:id="@+id/num1ET"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="88dp"
+        android:layout_width="377dp"
+        android:layout_height="73dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="Enter 1st number"
+        android:textColor="@color/black"
+        android:inputType="numberDecimal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/num2ET"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="252dp"
+        android:layout_width="377dp"
+        android:layout_height="73dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="116dp"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="Enter 2nd number"
+        android:textColor="@color/black"
+        android:inputType="numberDecimal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+        <!-- looked up inputType numberDecimal on stack overflow -->
 
     <TextView
         android:id="@+id/resultTV"
-        android:layout_width="144dp"
-        android:layout_height="42dp"
-        android:layout_marginStart="132dp"
-        android:layout_marginBottom="236dp"
+        android:layout_width="282dp"
+        android:layout_height="96dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginBottom="308dp"
         android:hint="Answer Displayed here"
+        android:textSize="20dp"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+    <!--Looked the gravity function used in the above code up on stack overflow-->
+
+    <Button
+        android:id="@+id/addition"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="232dp"
+        android:text="+"
+        android:backgroundTint="@color/barn_red"
+        android:onClick="findSum"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/findSum"
+        android:id="@+id/subtraction"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="144dp"
-        android:layout_marginBottom="188dp"
-        android:onClick="findSum"
-        android:text="Calculate"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="232dp"
+        android:text="-"
+        android:backgroundTint="@color/barn_red"
+        android:onClick="findSub"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/multiplication"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="92dp"
+        android:layout_marginBottom="156dp"
+        android:text="x"
+        android:backgroundTint="@color/barn_red"
+        android:onClick="findMult"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <EditText
-        android:id="@+id/num3ET"
+    <Button
+        android:id="@+id/division"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="176dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="Enter in +,-,*,/, or %"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginEnd="100dp"
+        android:layout_marginBottom="156dp"
+        android:backgroundTint="@color/barn_red"
+        android:onClick="findDiv"
+        android:text="/"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/mod"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="160dp"
+        android:layout_marginBottom="232dp"
+        android:backgroundTint="@color/barn_red"
+        android:onClick="findMod"
+        android:text="%"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/rootsAndExpo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="132dp"
+        android:layout_marginBottom="80dp"
+        android:backgroundTint="@color/dark_blue"
+        android:text="roots and Expo"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
