--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="orange">#EEFF5322</color>
+    <color name="barn_red">#CC00</color>
+    <color name="dark_blue">#CC0000DD</color>
 </resources>
