Talked to Denna about stacking elements, save incase of failure
This is a save in case my efforts are futile in stacking elements, also added the third activity though not much was added.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -110,11 +110,12 @@
         android:id="@+id/rootsAndExpo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="132dp"
-        android:layout_marginBottom="80dp"
+        android:layout_marginEnd="120dp"
+        android:layout_marginBottom="88dp"
         android:backgroundTint="@color/dark_blue"
         android:text="roots and Expo"
         android:textColor="@color/white"
+        android:onClick="switchScreen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
