--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -1,73 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SecondActivity">
 
-<EditText
-    android:id="@+id/editTextTextPersonName2"
-    android:layout_width="168dp"
-    android:layout_height="97dp"
-    android:layout_marginStart="148dp"
-    android:layout_marginTop="368dp"
-    android:ems="10"
-    android:inputType="textPersonName"
-    android:hint="No negatives!!!"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+    <EditText
+        android:id="@+id/editTextTextPersonName2"
+        android:layout_width="168dp"
+        android:layout_height="97dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="165dp"
+        android:layout_marginTop="219dp"
+        android:layout_marginEnd="78dp"
+        android:layout_marginBottom="288dp"
+        android:ems="10"
+        android:hint="No negatives!!!"
+        android:inputType="textPersonName" />
 
-<Button
-    android:id="@+id/calc"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="164dp"
-    android:layout_marginTop="320dp"
-    android:text="Calculate"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+    <Button
+        android:id="@+id/calc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="161dp"
+        android:layout_marginTop="320dp"
+        android:layout_marginBottom="196dp"
+        android:text="Calculate" />
 
-<Button
-android:id="@+id/button2"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:layout_marginStart="56dp"
-android:layout_marginBottom="92dp"
-android:text="Calculator"
-app:layout_constraintBottom_toBottomOf="parent"
-app:layout_constraintStart_toStartOf="parent" />
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="56dp"
+        android:layout_marginEnd="200dp"
+        android:layout_marginBottom="53dp"
+        android:text="Calculator" />
 
-<Button
-android:id="@+id/button3"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:layout_marginEnd="56dp"
-android:layout_marginBottom="92dp"
-android:text="Expo"
-app:layout_constraintBottom_toBottomOf="parent"
-app:layout_constraintEnd_toEndOf="parent" />
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="63dp"
+        android:layout_marginBottom="51dp"
+        android:text="Expo" />
 
     <EditText
         android:id="@+id/editTextTextPersonName3"
         android:layout_width="102dp"
         android:layout_height="90dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="68dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="27dp"
+        android:layout_marginEnd="282dp"
+        android:layout_marginBottom="429dp"
         android:ems="10"
         android:hint="Factor"
-        android:inputType="textPersonName"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:inputType="textPersonName" />
 
     <ImageView
-android:id="@+id/imageView7"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:layout_marginStart="76dp"
-android:layout_marginTop="56dp"
-app:layout_constraintStart_toStartOf="parent"
-app:layout_constraintTop_toTopOf="parent"
-app:srcCompat="@drawable/squareroot__1_" />
+        android:id="@+id/imageView"
+        android:layout_width="285dp"
+        android:layout_height="156dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="34dp"
+        android:layout_marginBottom="353dp"
+        app:srcCompat="@drawable/square_root" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
