--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -7,51 +7,53 @@
     tools:context=".ThirdActivity">
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/baseET"
         android:layout_width="138dp"
         android:layout_height="73dp"
         android:layout_marginStart="136dp"
         android:layout_marginTop="164dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:hint="Base"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName4"
+        android:id="@+id/ExponentET"
         android:layout_width="91dp"
         android:layout_height="59dp"
         android:layout_marginStart="248dp"
         android:layout_marginTop="104dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:hint="Exponent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/calculateTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="152dp"
         android:layout_marginTop="356dp"
         android:text="Calculate"
+        android:onClick="calc"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/toRational"
+        android:id="@+id/toRationalTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="128dp"
         android:layout_marginTop="456dp"
         android:text="Calc and root"
+        android:onClick=""
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/numDisTV"
         android:layout_width="203dp"
         android:layout_height="81dp"
         android:layout_marginStart="104dp"
@@ -59,6 +61,7 @@
         android:gravity="center"
         android:textSize="20dp"
         android:text="Answer Displayed Here"
+        android:onClick="changeScreen"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
