--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -7,17 +7,17 @@
     tools:context=".SecondActivity">
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/bottomET"
         android:layout_width="168dp"
         android:layout_height="97dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="165dp"
-        android:layout_marginTop="219dp"
-        android:layout_marginEnd="78dp"
-        android:layout_marginBottom="288dp"
+        android:layout_marginStart="176dp"
+        android:layout_marginTop="246dp"
+        android:layout_marginEnd="67dp"
+        android:layout_marginBottom="261dp"
         android:ems="10"
         android:hint="No negatives!!!"
         android:inputType="textPersonName" />
@@ -28,13 +28,14 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="161dp"
+        android:layout_marginStart="162dp"
         android:layout_marginTop="320dp"
-        android:layout_marginBottom="196dp"
+        android:layout_marginBottom="197dp"
+        android:onClick="root"
         android:text="Calculate" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/calculator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -42,6 +43,7 @@
         android:layout_marginStart="56dp"
         android:layout_marginEnd="200dp"
         android:layout_marginBottom="53dp"
+        android:onClick="toCalc"
         android:text="Calculator" />
 
     <Button
@@ -55,18 +57,19 @@
         android:text="Expo" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName3"
+        android:id="@+id/exponentET"
         android:layout_width="102dp"
         android:layout_height="90dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="27dp"
-        android:layout_marginEnd="282dp"
-        android:layout_marginBottom="429dp"
+        android:layout_marginStart="9dp"
+        android:layout_marginEnd="300dp"
+        android:layout_marginBottom="417dp"
         android:ems="10"
         android:hint="Factor"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:onClick="toExpo" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -77,5 +80,15 @@
         android:layout_marginEnd="34dp"
         android:layout_marginBottom="353dp"
         app:srcCompat="@drawable/square_root" />
+
+    <TextView
+        android:id="@+id/answerTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="152dp"
+        android:layout_marginBottom="144dp"
+        android:text="TextView" />
 
 </RelativeLayout>
