--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,11 +74,11 @@
         android:id="@+id/multiplication"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="92dp"
+        android:layout_marginStart="24dp"
         android:layout_marginBottom="156dp"
-        android:text="x"
         android:backgroundTint="@color/barn_red"
         android:onClick="findMult"
+        android:text="x"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -86,7 +86,7 @@
         android:id="@+id/division"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="100dp"
+        android:layout_marginEnd="28dp"
         android:layout_marginBottom="156dp"
         android:backgroundTint="@color/barn_red"
         android:onClick="findDiv"
@@ -107,16 +107,28 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/rootsAndExpo"
+        android:id="@+id/Expo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="120dp"
-        android:layout_marginBottom="88dp"
+        android:layout_marginEnd="144dp"
+        android:layout_marginBottom="80dp"
         android:backgroundTint="@color/dark_blue"
-        android:text="roots and Expo"
-        android:textColor="@color/white"
         android:onClick="switchScreen"
+        android:text="Expo"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/sqroot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/barn_red"
+        android:layout_marginStart="160dp"
+        android:layout_marginBottom="156dp"
+        android:text="sqrt"
+        android:onClick="findSqrt"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
