--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="136dp"
         android:layout_marginTop="164dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="number"
         android:hint="Base"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,7 +25,7 @@
         android:layout_marginStart="248dp"
         android:layout_marginTop="104dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="number"
         android:hint="Exponent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -36,6 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="152dp"
         android:layout_marginTop="356dp"
+        android:backgroundTint="@color/barn_red"
         android:text="Calculate"
         android:onClick="calc"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,10 +46,11 @@
         android:id="@+id/toRationalTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="128dp"
-        android:layout_marginTop="456dp"
-        android:text="Calc and root"
-        android:onClick=""
+        android:layout_marginStart="168dp"
+        android:layout_marginTop="448dp"
+        android:backgroundTint="@color/dark_blue"
+        android:onClick="changeScreen"
+        android:text="Calc"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
